--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,46 @@
-*,body,html{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    border: none;
-    outline: none;
+*{margin: 0;
+  padding: 0;
+
+}
+h1{
+
+    color: blue;
+    font-family: 'Courier New', Courier, monospace;
+margin: 0px 30px 0px 50px;
+
+}
+.txt{
+  font-size: 20px;
+  text-align: center;
+  font-weight: 100;
+  font-family: 'Courier New', Courier, monospace;
+  margin-top: 150px;
+  margin-bottom: 50px;
+}
+.txt1{
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 30px;
+  font-weight: bolder;
+ margin-top: 150px;
+ margin: 50px;
+}
+.txt3{
+  font-family: 'Courier New', Courier, monospace;
+text-indent: 50px;
+text-align: justify;
+margin: 0px 30px 0px 50px;
+
+}
+.dok{
+  font-family: 'Courier New', Courier, monospace;
+}
+.number{
+  vertical-align: middle;
+  font-size: 30px;
+  text-align: center;
+
+}
+.number a{
+  color: rgb(48, 30, 3);
+
 }
