--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     list-style: none;
     border: none;
     outline: none;
+    
 }
 .wrap,.wrap2,.wrap3{
     width: 1000px;
@@ -42,13 +43,22 @@ float: right;
     height: 75px;
     width: 200px;
     margin-bottom: 62px;
+    font-family: roboto;
+    font-size: 64px;
+    font-weight: 700;
+    text-align: center;
+
 }
 .number5s,.number4s,.number3s,.number2s{
     color:#FFFFFF;
-    margin: auto;
+    /* margin: auto; */
     height: 37.5px;
     width: 100px;
-
+    margin-top: 31px;
+    font-family: roboto;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
 }
 
 .wrap2{
@@ -76,6 +86,7 @@ float: right;
     margin: auto;
     margin-top: 31px;
     margin-bottom: 31.5px;
+    
 }
 
 .blok-big6,.blok-big7{
