--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-*,body,html{
+ @import url(./font.css);
+ *,body,html{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,6 +7,7 @@
     list-style: none;
     border: none;
     outline: none;
+   
     
 }
 .wrap,.wrap2,.wrap3{
@@ -43,7 +45,7 @@ float: right;
     height: 75px;
     width: 200px;
     margin-bottom: 62px;
-    font-family: roboto;
+    font-family: 'roboto';
     font-size: 64px;
     font-weight: 700;
     text-align: center;
@@ -55,7 +57,7 @@ float: right;
     height: 37.5px;
     width: 100px;
     margin-top: 31px;
-    font-family: roboto;
+    font-family: 'Roboto Medium';
     font-size: 36px;
     font-weight: 700;
     text-align: center;
