--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ float: right;
     height: 37.5px;
     width: 100px;
     margin-top: 31px;
-    font-family: 'Roboto Medium';
+    font-family: 'Roboto';
     font-size: 36px;
     font-weight: 700;
     text-align: center;
