--- a/css/font.css
+++ b/css/font.css
@@ -1,37 +1,12 @@
-font-face {
-    font-family:'Roboto';
-    src: url(../fonts/'Roboto Bold.eot');
-	src: url(../fonts'Roboto Bold.eot?#iefix') format('embedded-opentype'),
-		url(../fonts'Roboto Bold.woff2') format('woff2'),
-		url(../fonts'Roboto Bold.woff') format('woff'),
-		url(../fonts'Roboto Bold.svg#Roboto Bold') format('svg');
-    font-weight: 700;
-    font-style: normal;
-    font-stretch: normal;
-    unicode-range: U+0020-2044;
-}
-
 @font-face {
-    font-family:'Roboto';
-    src: url(../fonts'Roboto.eot');
-	src: url(../fonts'Roboto.eot?#iefix') format('embedded-opentype'),
-		url(../fonts'Roboto.woff2') format('woff2'),
-		url(../fonts'Roboto.woff') format('woff'),
-		url(../fonts'Roboto.svg#Roboto') format('svg');
-    font-weight: 400;
+    font-family: 'Roboto';
+    src: url(../fonts/Roboto-Bold.eot);
+    src: url(../fonts/eot?) format('embedded-opentype'),
+        url(../fonts/Roboto-Bold.woff2) format('woff2'),
+        url(../fonts/Roboto-Bold.woff) format('woff'),
+        url(../fonts/Roboto-Bold.ttf) format('truetype'),
+        url(../fonts/Roboto-Bold.svg) format('svg');
+    font-weight: bold;
     font-style: normal;
-    font-stretch: normal;
-    unicode-range: U+0020-2044;
+    font-display: swap;
 }
-    @font-face {
-        font-family:'Roboto Medium';
-        src: url(../fonts'../fontsRoboto Medium.eot');
-        src: url(../fonts'Roboto Medium.eot?#iefix') format('embedded-opentype'),
-            url(../fonts'Roboto Medium.woff2') format('woff2'),
-            url(../fonts'Roboto Medium.woff') format('woff'),
-            url(../fonts'Roboto Medium.svg#Roboto Medium') format('svg');
-        font-weight: 500;
-        font-style: normal;
-        font-stretch: normal;
-        unicode-range: U+0020-2044;
-    }
