--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,14 @@
 }
 .menu,.main-btn{
     display: inline-block;
+    margin: 0 15px;
+    margin-top: 17px;
+    margin-bottom: 16px;
    }
  
-
+ul{
+    text-align: center;
+}
 
 .link{
     color: black; 
@@ -38,6 +43,11 @@
     display: inline-block;
    
 }
+.namber{
+    float: right;
+    display: inline-block;
+
+}
 .main-btn{
     width: 170px;
     height: 40px;
@@ -45,25 +55,28 @@
     border: 2px solid #F13C6E;
     background:#ffff;
     display: inline-block;
-    float: right;
+    /* float: right; */
     margin-right: 405px;
     /* margin-bottom: 40px; */
-    margin-top: -30px;
+    /* margin-top: -30px; */
     
 }
 
-.tel{
+.tel1{
     /* margin-left: 515px; */
+    display: inline-block;
+    margin-right: 40px;
+    margin-top: 50px;
     
 }
-.tel1{
+/* .tel1{
     height: 19px;
     width: 127px;
     float: right;
     margin-right: 615px;
     display: inline-block;
     margin-top: 50px;
-}
+} */
  .txt{
     margin-top: 10px;
     margin-left: 27px;
