--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ section {
     float: right;
     /* margin-bottom: 52.73px; */
     display: inline-block;
-    /* margin-top: 52.73px; */
+    margin-top: 40.73px;
     
 
 
@@ -267,6 +267,20 @@ p{
 .tekst{
     display: inline-block;
 }
-img{
-    margin-top: 52.73px;
+.forma{
+    width: 225px;
+    height: 35px;
+    border-radius: 30px;
+    margin-top: 25px;
+    float: left;
+    background:#ffff;
+    text-indent: 25px;
+    margin-left: 40px;
+
+
+
 }
+.p{
+    padding-top: 9px;
+}
+
