--- a/css/style.css
+++ b/css/style.css
@@ -171,27 +171,25 @@ section{
     /* padding-top: 35px; */
     padding-left: 40px;
     display: inline-block;
-    
+   
     
    }
+   
+
    .bonus{
     display: inline-block;
+    margin-top: 35px;
    }
    h3{
     color: #ffff;
     font-size: 18px;
-    /* margin-top: 35px; */
-    /* margin-left: 40 px; */
-    /* display: inline-block; */
 
    }
-   .mal {
-    /* float: right; */
+   .mal{
+    margin-bottom: 52.73px;
     display: inline-block;
-    /* margin-right: 45px; */
-    margin-top: 52.73px;
-    margin-right: 45px;
-
+    margin-left: 355px;
+    
    }
    .txt3{
     font-size: 14px;
@@ -199,4 +197,4 @@ section{
     margin-top: 25px;
     /* display: inline-block; */
 
-   }
+   } 
