--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,9 @@ section{
     /* padding-top: 35px; */
     padding-left: 40px;
     display: inline-block;
+    float: left;
+    /* margin-left: 405px; */
+    margin: 15px;
    
     
    }
@@ -179,16 +182,21 @@ section{
    .bonus{
     display: inline-block;
     margin-top: 35px;
+    float: left;
    }
    h3{
     color: #ffff;
     font-size: 18px;
+    
 
    }
    .mal{
-    margin-bottom: 52.73px;
+    /* margin-bottom: 52.73px; */
     display: inline-block;
-    margin-left: 355px;
+    float: right;
+    margin-top: 52.73px;
+    margin-right: 45px;
+    
     
    }
    .txt3{
@@ -196,5 +204,51 @@ section{
     color: #ffff;
     margin-top: 25px;
     /* display: inline-block; */
-
+    
    } 
+   .forma{
+    height: 35px;
+    width: 225px;
+    background: #ffff;
+    border-radius: 40px;
+    margin-top: 25px;
+    padding-top: 9px;
+    padding-left: 25px;
+   }
+   .car{
+    height: 212px;
+    width: 540px;
+    background: #F13C6E;
+    /* padding-top: 35px; */
+    /* padding-left: 40px; */
+    display: inline-block;
+    /* float: left; */
+    margin: 15px;
+    float: right;
+    /* margin-right: 405px; */
+   
+}
+.maps{
+    display: inline-block;
+    margin-top: 35px;
+    /* float: left; */
+    margin-left: 40px;
+}
+.clear {
+    clear: both;
+}
+.btn-4{
+    width: 170px;
+    height: 40px;
+    border: 2px solid #ffff;
+    border-radius: 40px;
+    background: #F13C6E;
+    /* margin-left: 10px; */
+    font-size: 14px;
+    color: #ffff;
+    margin-top: 25px;
+
+}
+.carimg{
+    margin-left: 45.33px;
+}
