--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 .container{
     max-width: 1200px;
-    background: #E5E5E5;
+    /* background: #E5E5E5; */
     margin: auto;
 }
 .menu,.main-btn{
@@ -35,31 +35,29 @@ ul{
 }
 .rekvizit{
     background: #ffff;
+   
 
 }
 .rekvizit-1{
-    padding-left: 405px;
-    background: #ffff;
-    padding-top: 20px;
-    padding-right: 405px;
-    
+    float: left;
 }
 .logo{
     display: inline-block;
+    padding: 20px;
 }
 
 
 .tel_btn{
-    
-    display: inline-block;
-    
     float: right;
-    padding-top: 20px;
+margin-top: 40px;
+    
+    
 }
 a{
     color: #000;
+    /* margin-top: 50px; */
 }
-.btn1{
+.btn{
     width: 170px;
     height: 40px;
     border: 2px solid #F13C6E;
@@ -69,7 +67,13 @@ a{
     font-size: 14px;
 
 }
-hr{
+.btn-1{
+    padding: 12px 0px;
+}
+.clear{
+    clear: both;
+}
+.hr{
   border: 1px solid #EFEFEF;  
   margin-top: 40px;
 }
