--- a/css/style.css
+++ b/css/style.css
@@ -285,13 +285,13 @@ section{
     width: 100px;
     display: inline-block;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 500px;
     /* margin: 80px; */
     /* float: left; */
     /* background: red; */
 
 }
-hr{
+.line2{
     margin-top: 30px;
 
 }
@@ -302,4 +302,8 @@ hr{
 }
 .categor-2,.categor-3,.categor-4{
     margin-left: 200px;
+}
+.line3{
+    margin-top: 60px;
+    border: 1px solid #EFEFEF;
 }
