--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 *,body,html{
     margin: 0;
     padding: 0;
@@ -7,8 +7,10 @@
     list-style: none;
     border: none;
     outline: none;
+    font-family: roboto;
 }.head-section{
     background: #E5E5E5;
+    
     
 
 }
@@ -31,7 +33,10 @@ ul{
 }
 
 .link{
-    color: black;    
+    color: black; 
+    font-size: 16px;
+    width: 400px; 
+    /* font-family: roboto; */
 }
 .rekvizit{
     background: #ffff;
