--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,14 @@
 
 
 .menu{
-    display: flex;
+display: flex;
    padding: 34px 51px 24px 51px;
-   /* justify-content: center; */
+   justify-content: space-between;
    
+}
+.block-menu{
+    display: flex;
+    
 }
 .img-logo{
     height: 28px;
@@ -30,9 +34,7 @@
     margin: 0 21px;
     
 }
-.btn{
-    justify-content: end;
-}
+
 .link-btn-1{
     padding: 9px 36px; 
     border: 1px solid #000;
@@ -55,10 +57,14 @@ margin-left: 10px;
 hr{
     border: 1px solid #CCCCCC;
 }
+.accelerate{
+    display: flex;
+    padding: 115px 67px 175px 51px;
+}
 h1{
     font-size: 65px;
     font-weight: 600px;
-    padding: 129px 0 51px 51px;
+    padding: 0px 0 51px 51px;
 }
 .txt-1{
     font-size: 25px;
@@ -90,6 +96,8 @@ border: 1px solid #000;
     font-size: 15px;
     font-weight: 400px;
     padding: 40px 51px;
-    
+    color: #000000;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    line-height: 25px;
 }
 
