--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ hr{
 }
 .accelerate{
     display: flex;
-    padding: 115px 67px 175px 51px;
+    padding: 70px 67px 65px 51px;
 }
 h1{
     font-size: 65px;
@@ -99,5 +99,26 @@ border: 1px solid #000;
     color: #000000;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     line-height: 25px;
+}
+.bg{
+    background:#FF9C7D;
+
+}
+h2{
+    padding-top: 98px;
+    text-align: center;
+    font-weight: 600;
+font-size: 50px;
+line-height: 60px;
+
+}
+.logs{
+    display: flex;
+    /* justify-content: center; */
+    padding: 70px 51px 80px 51px;
+    
+}
+.logs-1{
+    margin: 51px;
 }
 
