--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ line-height: 60px;
 .txt3{
     margin-right: 141px;
 }
-h4{
+h3,h4{
     margin-top: 151px;
     font-weight: 600;
 font-size: 50px;
@@ -177,7 +177,7 @@ font-size: 20px;
 line-height: 30px;
 margin-top: 50px;
 color: #000;
-line-height: 45px;
+line-height: 50px;
 }
 .shorten{
     display: flex;
