--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ line-height: 50px;
     padding: 98px 40px 80px 54px;
     background: #FFF8E4;
     /* display: flex; */
-    align-items: ;
+    
 }
 .block-what{
     /* padding-bottom: 853px; */
@@ -211,3 +211,36 @@ line-height: 35px;
 .img2{
     margin-top: 57px;
 }
+.boost{
+    padding: 98px 40px 80px 54px;
+}
+
+.link{
+    margin-top: 25px;
+    display: block;
+    color: #000;
+    text-decoration: underline;
+    font-size: 20px;
+    font-weight: 400;
+}
+.txt-6{
+    font-weight: 400;
+font-size: 20px;
+line-height: 30px;
+margin-top: 34px;
+}
+.txt-7{
+    font-weight: 400;
+font-size: 18px;
+line-height: 25px;
+}
+.Managers{
+    margin-top: 49px;
+}
+.Developers{
+    margin-top: 80px;
+}
+.Translators{
+    margin-top: 58px;
+}
+
